objects/SVMXC__Service_Order_Line__c.object
<CustomObject>
    <fields>
        <fullName>SVMXC__Quantity_Shipment_Initiated2__c</fullName>
        <description>For part requests, quantity for which shipment has been initiated so far.</description>
        <inlineHelpText>For part requests, quantity for which shipment has been initiated so far.</inlineHelpText>
        <label>Qty Shipment Initiated</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__Quantity_Shipped2__c</fullName>
        <description>For part requests, actual quantity shipped for the request.</description>
        <inlineHelpText>For part requests, actual quantity shipped for the request.</inlineHelpText>
        <label>Qty Shipped</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__Received_City__c</fullName>
        <description>“City” part of the received location</description>
        <inlineHelpText>“City” part of the received location</inlineHelpText>
        <label>Received City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__Received_Country__c</fullName>
        <description>“Country” part of the received location</description>
        <inlineHelpText>“Country” part of the received location</inlineHelpText>
        <label>Received Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Afghanistan</fullName>
                </value>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>American Samoa</fullName>
                </value>
                <value>
                    <fullName>Andorra</fullName>
                </value>
                <value>
                    <fullName>Anguilla</fullName>
                </value>
                <value>
                    <fullName>Antarctica</fullName>
                </value>
                <value>
                    <fullName>Antigua And Barbuda</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Armenia</fullName>
                </value>
                <value>
                    <fullName>Aruba</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Ayerbaijan</fullName>
                </value>
                <value>
                    <fullName>Bahamas, The</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Barbados</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belize</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Benin</fullName>
                </value>
                <value>
                    <fullName>Bermuda</fullName>
                </value>
                <value>
                    <fullName>Bhutan</fullName>
                </value>
                <value>
                    <fullName>Bolivia</fullName>
                </value>
                <value>
                    <fullName>Bouvet Is</fullName>
                </value>
                <value>
                    <fullName>Bosnia and Herzegovina</fullName>
                </value>
                <value>
                    <fullName>Botswana</fullName>
                </value>
                <value>
                    <fullName>Brazil</fullName>
                </value>
                <value>
                    <fullName>British Indian Ocean Territory</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMXC__Received_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Received Location (Do Not Use)</description>
        <inlineHelpText>Received Location (Do Not Use)</inlineHelpText>
        <label>Received Location (Do Not Use)</label>
        <referenceTo>SVMXC__Service_Contract_Sites__c</referenceTo>
        <relationshipName>Work_Details_Received_Location</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Received_Quantity2__c</fullName>
        <description>Number of units of this product received so far.</description>
        <inlineHelpText>Number of units of this product received so far.</inlineHelpText>
        <label>Received Qty</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__Received_State__c</fullName>
        <description>“State/Province” part of the received location</description>
        <inlineHelpText>“State/Province” part of the received location</inlineHelpText>
        <label>Received State</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__Received_Street__c</fullName>
        <description>“Street” part of the received location</description>
        <inlineHelpText>“Street” part of the received location</inlineHelpText>
        <label>Received Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SVMXC__Received_Zip__c</fullName>
        <description>“Zip/Postal code” part of the received location</description>
        <inlineHelpText>“Zip/Postal code” part of the received location</inlineHelpText>
        <label>Received Zip</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__Reference_Information__c</fullName>
        <description>Additional information about the work performed, or expense incurred (travel ticket # for example)</description>
        <inlineHelpText>Additional information about the work performed, or expense incurred (travel ticket # for example)</inlineHelpText>
        <label>Reference Information</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SVMXC__Requested_City__c</fullName>
        <description>“City” part of the requested location</description>
        <inlineHelpText>“City” part of the requested location</inlineHelpText>
        <label>Requested City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__Requested_Country__c</fullName>
        <description>“Country” part of the requested location</description>
        <inlineHelpText>“Country” part of the requested location</inlineHelpText>
        <label>Requested Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Afghanistan</fullName>
                </value>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>American Samoa</fullName>
                </value>
                <value>
                    <fullName>Andorra</fullName>
                </value>
                <value>
                    <fullName>Anguilla</fullName>
                </value>
                <value>
                    <fullName>Antarctica</fullName>
                </value>
                <value>
                    <fullName>Antigua And Barbuda</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Armenia</fullName>
                </value>
                <value>
                    <fullName>Aruba</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Ayerbaijan</fullName>
                </value>
                <value>
                    <fullName>Bahamas, The</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Barbados</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belize</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Benin</fullName>
                </value>
                <value>
                    <fullName>Bermuda</fullName>
                </value>
                <value>
                    <fullName>Bhutan</fullName>
                </value>
                <value>
                    <fullName>Bolivia</fullName>
                </value>
                <value>
                    <fullName>Bouvet Is</fullName>
                </value>
                <value>
                    <fullName>Bosnia and Herzegovina</fullName>
                </value>
                <value>
                    <fullName>Botswana</fullName>
                </value>
                <value>
                    <fullName>Brazil</fullName>
                </value>
                <value>
                    <fullName>British Indian Ocean Territory</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMXC__Requested_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Location from which parts are requested</description>
        <inlineHelpText>To Location</inlineHelpText>
        <label>To Location</label>
        <referenceTo>SVMXC__Site__c</referenceTo>
        <relationshipName>Service_Order_Line_Req_Loc</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Requested_Quantity2__c</fullName>
        <description>Number of units of this product required</description>
        <inlineHelpText>Number of units of this product required</inlineHelpText>
        <label>Requested Qty</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__Requested_State__c</fullName>
        <description>“State/Province” part of the requested location</description>
        <inlineHelpText>“State/Province” part of the requested location</inlineHelpText>
        <label>Requested State</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__Requested_Street__c</fullName>
        <description>“Street” part of the requested location</description>
        <inlineHelpText>“Street” part of the requested location</inlineHelpText>
        <label>Requested Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SVMXC__Requested_Zip__c</fullName>
        <description>“Zip/Postal code” part of the requested location</description>
        <inlineHelpText>“Zip/Postal code” part of the requested location</inlineHelpText>
        <label>Requested Zip</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__Select__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field to bind checkbox in List of Work Detail records on Visualforce page with controller.</description>
        <inlineHelpText>Field to bind checkbox in List of Work Detail records on Visualforce page with controller.</inlineHelpText>
        <label>Select</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SVMXC__Serial_Number_List__c</fullName>
        <description>Unique identification of a product. This field is intended to be used when Inventory Process in SFM API Configuration is enabled.</description>
        <inlineHelpText>Unique identification of a product. This field is intended to be used when Inventory Process in SFM API Configuration is enabled.</inlineHelpText>
        <label>Serial Number</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SVMXC__Serial_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Serial number of the part used. Reference to an existing installed product record in ServiceMax</description>
        <label>IB Serial Number</label>
        <referenceTo>SVMXC__Installed_Product__c</referenceTo>
        <relationshipName>Service_Order_Line</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Service_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Name of the service group if the Log Against is set to Service Group. Is a lookup to an existing service group in ServiceMax</description>
        <inlineHelpText>Name of the service group if the Log Against is set to Service Group. Is a lookup to an existing service group in ServiceMax</inlineHelpText>
        <label>Service Team</label>
        <referenceTo>SVMXC__Service_Group__c</referenceTo>
        <relationshipName>Service_Order_Line</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Service_Maintenance_Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service/Maintenance Contract</label>
        <referenceTo>SVMXC__Service_Contract__c</referenceTo>
        <relationshipName>Work_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Service_Order__c</fullName>
        <description>Service order number. Is a lookup to an existing service order in ServiceMax</description>
        <inlineHelpText>Service order number. Is a lookup to an existing service order in ServiceMax</inlineHelpText>
        <label>Work Order</label>
        <referenceTo>SVMXC__Service_Order__c</referenceTo>
        <relationshipName>Service_Order_Line</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SVMXC__Start_Date_and_Time__c</fullName>
        <description>Start date and time if the line type is Labor</description>
        <inlineHelpText>Start date and time if the line type is Labor</inlineHelpText>
        <label>Start Date and Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SVMXC__Total_Estimated_Price__c</fullName>
        <description>Total Estimated Price (Estimated quantity multiplied by estimated unit price)</description>
        <formula>IF(SVMXC__Billable_Quantity__c &gt; 0, SVMXC__Billable_Quantity__c * SVMXC__Estimated_Price2__c - (SVMXC__Discount__c*(SVMXC__Billable_Quantity__c * SVMXC__Estimated_Price2__c)), SVMXC__Estimated_Quantity2__c * SVMXC__Estimated_Price2__c - (SVMXC__Discount__c*(SVMXC__Estimated_Quantity2__c * SVMXC__Estimated_Price2__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Estimated Price</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SVMXC__Total_Line_Price__c</fullName>
        <description>Total Line Price (Usage quantity multiplied by line&apos;s unit price)</description>
        <formula>IF(SVMXC__Billable_Quantity__c &gt; 0, SVMXC__Billable_Quantity__c * SVMXC__Actual_Price2__c - (SVMXC__Discount__c*(SVMXC__Billable_Quantity__c * SVMXC__Actual_Price2__c)), SVMXC__Actual_Quantity2__c * SVMXC__Actual_Price2__c - (SVMXC__Discount__c*(SVMXC__Actual_Quantity2__c * SVMXC__Actual_Price2__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Line Price</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SVMXC__Transaction_Results__c</fullName>
        <description>Success or error message as a result of a transaction. This message is derived from executing a defined process in SFM API Configuration.</description>
        <inlineHelpText>Success or error message as a result of a transaction. This message is derived from executing a defined process in SFM API Configuration.</inlineHelpText>
        <label>Transaction Results</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SVMXC__Use_Price_From_Pricebook__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Leave this box checked if you want the price to be filled automatically from the default price book. If you like to enter a price manually for this part, simply uncheck this box.</description>
        <inlineHelpText>Leave this box checked if you want the price to be filled automatically from the default price book. If you like to enter a price manually for this part, simply uncheck this box.</inlineHelpText>
        <label>Use Price From Pricebook/Contract</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SVMXC__Work_Description__c</fullName>
        <description>An assessment of work to be performed or additional details about the line type</description>
        <inlineHelpText>An assessment of work to be performed or additional details about the line type</inlineHelpText>
        <label>Work Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SVMXC__Work_Detail__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Self lookup. Primarily used to associate Product Serviced record.</description>
        <label>Work Detail</label>
        <referenceTo>SVMXC__Service_Order_Line__c</referenceTo>
        <relationshipName>Work_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Symptom_Code__c</fullName>
        <inlineHelpText>Performance includes those defects mitigated by markouts.
Upgrade includes ECO/deviation rework.
Use Other only when no other category applies and enter description in &quot;Other&quot; field: includes engineering experiments and salvaging components from part.</inlineHelpText>
        <label>Failure Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cosmetic</fullName>
                </value>
                <value>
                    <fullName>Functional</fullName>
                </value>
                <value>
                    <fullName>Damage</fullName>
                </value>
                <value>
                    <fullName>Performance</fullName>
                </value>
                <value>
                    <fullName>Wrong Part</fullName>
                </value>
                <value>
                    <fullName>Upgrade</fullName>
                </value>
                <value>
                    <fullName>Programming</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Workmanship</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Work Detail</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>WL-{00000000}</displayFormat>
        <label>Line Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Work Details</pluralLabel>
    <recordTypes>
        <fullName>SVMXC__Estimate</fullName>
        <active>true</active>
        <description>Estimate of work to be performed</description>
        <label>Estimate</label>
    </recordTypes>
    <recordTypes>
        <fullName>SVMXC__Products_Serviced</fullName>
        <active>false</active>
        <description>Products Serviced</description>
        <label>Products Serviced</label>
    </recordTypes>
    <recordTypes>
        <fullName>SVMXC__RequestReceipt</fullName>
        <active>true</active>
        <description>Part requests and receipt information</description>
        <label>Request/Receipt</label>
    </recordTypes>
    <recordTypes>
        <fullName>SVMXC__UsageConsumption</fullName>
        <active>true</active>
        <description>Details of actual work peformed on the service order</description>
        <label>Usage/Consumption</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>